# kube-dump-to-s3

./: .gitignore  Dockerfile  Makefile  README.md  docker-image.nix  flake.nix  pyproject.toml
.github/workflows/: docker-test.yml
kube_dump_to_s3/: __init__.py  __main__.py  config.py  kube_dump.py  tar.py  zstd.py
